@startuml

class Lab {
  - int id
  - string courseCode
  - string section
  - int instructorId
  - ScheduleTiming schedule
  - vector<TA> tas
  - vector<ActualTiming> timeSheets
  + getId()
  + getCourseCode()
  + getSection()
  + getInstructorId()
  + getSchedule()
  + setInstructorId()
  + setSchedule()
  + addTA()
  + addActualTiming()
}

class ScheduleTiming {
  - string dayOfWeek
  - string expectedStart
  - string expectedEnd
  + getDay()
  + getStart()
  + getEnd()
}

class ActualTiming {
  - string date
  - string actualStart
  - string actualEnd
  + getDate()
  + getStart()
  + getEnd()
}

class TA {
  - int id
  - string name
  + getId()
  + getName()
}

class Instructor {
  - int id
  - string name
}

class Room {
  - int id
  - int buildingId
  - string roomNumber
}

class Building {
  - int id
  - string name
  - vector<int> roomIds
  - int attendantId
}

class LabRepository {
  - string fileName
  + saveLabs()
  + loadLabs()
  + getAll()
  + getById()
  + add()
  + update()
  + remove()
  + getNextId()
}

Lab "1" o-- "*" TA
Lab "1" o-- "*" ActualTiming
Lab "1" *-- "1" ScheduleTiming
Building "1" o-- "*" Room
Building "1" -- "1" Attendant : has

@enduml
